Fixed Homepage grid gap bug, which affected iOS

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,12 +1,20 @@
 .grid-3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 4rem;
+  @supports (gap: 4rem) {
+    gap: 4rem;
+  }
 
   @include respond(tab-port) {
-    gap: 2.4rem;
+    @supports (gap: 2.4rem) {
+      gap: 2.4rem;
+    }
   }
   @include respond(phone) {
     grid-template-columns: none;
+    gap: initial;
+    & > *:not(:last-child) {
+      margin-bottom: 2.4rem;
+    }
   }
 }
