--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -219,7 +219,6 @@
 
     @media screen and (min-width: 900px) and (max-width: 1000px) {
       gap: 2.5rem !important;
-      grid-gap: 2.5rem !important;
       margin-left: 5rem;
       margin-right: 5rem;
     }
